[project]
name = "regression-analysis-week07"
version = "1.0.0"
description = "Week 7: Optimization Engine & Generalization Quest"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
    "scikit-learn>=1.0",
    "matplotlib>=3.4",
]

[tool.uv]
python-version = "3.13"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
